--- a/notes/_posts/2024-03-22-hpbn-ch2-part1.md
+++ b/notes/_posts/2024-03-22-hpbn-ch2-part1.md
@@ -1,17 +1,13 @@
 ---
 layout: post
-title: high-performance browser networking: chapter 2, part 1
+title: high-performance browser networking chapter 2, part 1
 categories: networking
 author: saif
 ---
 
 
-<div dir="rtl">
-
 
 ### Introduction
-
-
 
 مقدمة الفصل بتتكلم عن two protocols بتقوم عليهم شبكة الإنترنت، الإنترنت هو الشبكة اللي مجازًا بنعتبرها هي ال Interconnection الوحيد في العالم، وبمعنى أدق شبكة الإنترنت هي network of networks:
 
@@ -57,5 +53,3 @@ sender or client: عُلِم، انا كمان هزود +1 على كل من ال
 
 
 وبالتالي بيظهر أهمية ال connection reuse
-
-</div>
