--- a/notes/_posts/2024-03-22-hpbn-ch2-part1.md
+++ b/notes/_posts/2024-03-22-hpbn-ch2-part1.md
@@ -6,8 +6,9 @@ author: saif
 ---
 
 
-
 ### Introduction
+
+<div dir="rtl">
 
 مقدمة الفصل بتتكلم عن two protocols بتقوم عليهم شبكة الإنترنت، الإنترنت هو الشبكة اللي مجازًا بنعتبرها هي ال Interconnection الوحيد في العالم، وبمعنى أدق شبكة الإنترنت هي network of networks:
 
@@ -17,24 +18,35 @@ author: saif
 
 فلو كان ال ip protocol مش reliable channel فال 
 
+</div>
+
 > tcp provides the abstraction of a reliable network running over unreliable channel
+
+<div dir="rtl">
 
 دي أهم نقطة ممكن تفتكرها عن ال tcp protocol وباقي الفصل بيتكلم عن الخصائص اللي بيوفرها ال tcp عشان يضمن ال reliability دي؟ وبشكل إجمالي مش تفصيلي، من الخصائص دي:
 
-- عملية ال retransmission لل lost data؛ لو حصل وفيه داتا وقعت في الطريق ال tcp مسؤول إنه يعيد إرسالها تاني
-- عملية إنه يحصل in order delivery؛ تخيل ان ال request اللي هتبعته هيتقسم لأكتر من packets فكرة إن ال packets توصل بنفس الترتيب اللي اتبعتت بيه مش مضمونة، كل packet ممكن تاخد طريق مختلف عن أختها على حسب ظروف وعوامل متغيرة، وده بدوره هيسبب إن فيه اختلاف في timing الوصول. ال tcp protocol الناحية التانية هيجمعهم ويرتبهم ليك قبل ما يديهم لل application layer
-- .. من النقطتين دول أعتقد ممكن تكون كوّنت intuition معين عن ال tcp .. التفاصيل في تكملة الفصل
+    - عملية ال retransmission لل lost data؛ لو حصل وفيه داتا وقعت في الطريق ال tcp مسؤول إنه يعيد إرسالها تاني
+    - عملية إنه يحصل in order delivery؛ تخيل ان ال request اللي هتبعته هيتقسم لأكتر من packets فكرة إن ال packets توصل بنفس الترتيب اللي اتبعتت بيه مش مضمونة، كل packet ممكن تاخد طريق مختلف عن أختها على حسب ظروف وعوامل متغيرة، وده بدوره هيسبب إن فيه اختلاف في timing الوصول. ال tcp protocol الناحية التانية هيجمعهم ويرتبهم ليك قبل ما يديهم لل application layer
+    - .. من النقطتين دول أعتقد ممكن تكون كوّنت intuition معين عن ال tcp .. التفاصيل في تكملة الفصل
 
 جملة أخيرة مهمة عن ال tcp protocol وتأثيره من منظور ال web performance هي وبشكل غير مفاجئ بالمرة:
 
+</div>
+
 > Tcp is optimised for accurate delivery rather than a timely one
+
+<div dir="rtl">
 
 تخيله صنايعي شاطر جدا ودقيق جدا وده بالضرورة مخليه بطيء في شغله شوية وبالتالي ده هيأثر معاك في الوقت اللي هيسلمك فيه الشغل.
 
 جزء كبير من تحسين ال performance يتمحور حوالين الفهم الجيد لخصائص ال tcp protocol وإزاي نستفيد منها عشان نضمن أفضل أداء.
 
+</div>
 
 ### 3-Way Handshake
+
+<div dir="rtl">
 
 عشان ن establish connection بين ال sender وال receiver لازم يسلموا على بعض ٣ مرات قبل ما ال application data تبدأ تتبعت.
 
@@ -51,5 +63,6 @@ sender or client: عُلِم، انا كمان هزود +1 على كل من ال
 
 دي عملية ال tcp startup اللي بتحصل في كل connection جديد وبالتالي هي مساحة تطوير ممكن نحسن فيها (حاجة زي ال TFO - TCP Fast Open) وعامل مهم ومؤثر في ال performance؛ لأن بشكل بسيط وبديهي انت مع كل connection هتعمل full roundtrip من الكلاينت للسيرفر والعكس، وده وقت محسوب مهما كان قليل، ورقم هنعتبره من ضمن أرقام حسبة ال latency
 
-
 وبالتالي بيظهر أهمية ال connection reuse
+
+</div>
