--- a/notes/_posts/2024-03-22-hpbn-ch2-part1.md
+++ b/notes/_posts/2024-03-22-hpbn-ch2-part1.md
@@ -18,28 +18,25 @@ author: saif
 - ثانيًا، ال tcp - transmission control protocol وده البروتوكول المسؤول عن ضمان دقة عملية الإرسال <br>
 <br>
 فلو كان ال ip protocol مش reliable channel فال <br>
-<br>
-
-</div>
-
 > tcp provides the abstraction of a reliable network running over unreliable channel
 
+</div>
 <div dir="rtl">
 
-دي أهم نقطة ممكن تفتكرها عن ال tcp protocol وباقي الفصل بيتكلم عن الخصائص اللي بيوفرها ال tcp عشان يضمن ال reliability دي؟ وبشكل إجمالي مش تفصيلي، من الخصائص دي: <br>
+دي أهم نقطة ممكن تفتكرها عن ال tcp protocol وباقي الفصل بيتكلم عن الخصائص اللي بيوفرها ال tcp عشان يضمن ال reliability دي ،وبشكل إجمالي مش تفصيلي، من الخصائص دي الآتي: <br>
 <br>
 
 - عملية ال retransmission لل lost data؛ لو حصل وفيه داتا وقعت في الطريق ال tcp مسؤول إنه يعيد إرسالها تاني <br>
-<br>
+
 - عملية إنه يحصل in order delivery؛ تخيل ان ال request اللي هتبعته هيتقسم لأكتر من packets فكرة إن ال packets توصل بنفس الترتيب اللي اتبعتت بيه مش مضمونة، كل packet ممكن تاخد طريق مختلف عن أختها على حسب ظروف وعوامل متغيرة، وده بدوره هيسبب إن فيه اختلاف في timing الوصول. ال tcp protocol الناحية التانية هيجمعهم ويرتبهم ليك قبل ما يديهم لل application layer <br>
-<br>
+
 - .. من النقطتين دول أعتقد ممكن تكون كوّنت intuition معين عن ال tcp .. التفاصيل في تكملة الفصل <br>
 <br>
 جملة أخيرة مهمة عن ال tcp protocol وتأثيره من منظور ال web performance هي وبشكل غير مفاجئ بالمرة: <br>
-<br>
-</div>
 
 > Tcp is optimised for accurate delivery rather than a timely one
+
+</div>
 
 <div dir="rtl">
 
@@ -65,7 +62,7 @@ receiver or server: أهلا، ده X+1 وده Y انا كمان اختارت ر
 <br>
 sender or client: عُلِم، انا كمان هزود +1 على كل من ال X وال Y. ودي خطوة ال (ACK) وعلطول هتبدأ عملية نقل ال application data بمجرد ما السيرفر يستلم من ال الكلاينت ال ack <br>
 <br>
-دي عملية ال tcp startup اللي بتحصل في كل connection جديد وبالتالي هي مساحة تطوير ممكن نحسن فيها (حاجة زي ال TFO - TCP Fast Open) وعامل مهم ومؤثر في ال performance؛ لأن بشكل بسيط وبديهي انت مع كل connection هتعمل full roundtrip من الكلاينت للسيرفر والعكس، وده وقت محسوب مهما كان قليل، ورقم هنعتبره من ضمن أرقام حسبة ال latency <br>
+دي عملية ال tcp startup اللي بتحصل مع كل connection جديد وبالتالي هي مساحة تطوير ممكن نحسن فيها وعامل مهم ومؤثر في ال performance ؛ لأن بشكل بسيط وبديهي انت مع كل connection هتعمل full roundtrip من الكلاينت للسيرفر والعكس، وده وقت محسوب مهما كان قليل، ورقم هنعتبره من ضمن أرقام حسبة ال latency <br>
 <br>
 وبالتالي بيظهر أهمية ال connection reuse <br>
 <br>
