--- a/notes/_posts/2024-03-22-hpbn-ch2-part1.md
+++ b/notes/_posts/2024-03-22-hpbn-ch2-part1.md
@@ -18,25 +18,26 @@ author: saif
 - ثانيًا، ال tcp - transmission control protocol وده البروتوكول المسؤول عن ضمان دقة عملية الإرسال <br>
 <br>
 فلو كان ال ip protocol مش reliable channel فال <br>
-> tcp provides the abstraction of a reliable network running over unreliable channel
-
 </div>
+
+> TCP provides the abstraction of a reliable network running over unreliable channel
+
+
 <div dir="rtl">
 
-دي أهم نقطة ممكن تفتكرها عن ال tcp protocol وباقي الفصل بيتكلم عن الخصائص اللي بيوفرها ال tcp عشان يضمن ال reliability دي ،وبشكل إجمالي مش تفصيلي، من الخصائص دي الآتي: <br>
+دي أهم نقطة ممكن تفتكرها عن ال tcp protocol وباقي الفصل بيتكلم عن الخصائص اللي بيوفرها ال tcp عشان يضمن ال reliability دي، وبشكل إجمالي مش تفصيلي، من الخصائص دي الآتي: <br>
 <br>
 
-- عملية ال retransmission لل lost data؛ لو حصل وفيه داتا وقعت في الطريق ال tcp مسؤول إنه يعيد إرسالها تاني <br>
+- عملية ال retransmission لل lost data؛ لو حصل وفيه داتا وقعت في الطريق ال tcp مسؤول إنه يعيد إرسالها تاني. <br>
 
-- عملية إنه يحصل in order delivery؛ تخيل ان ال request اللي هتبعته هيتقسم لأكتر من packets فكرة إن ال packets توصل بنفس الترتيب اللي اتبعتت بيه مش مضمونة، كل packet ممكن تاخد طريق مختلف عن أختها على حسب ظروف وعوامل متغيرة، وده بدوره هيسبب إن فيه اختلاف في timing الوصول. ال tcp protocol الناحية التانية هيجمعهم ويرتبهم ليك قبل ما يديهم لل application layer <br>
+- عملية ال in order delivery؛ تخيل ان ال request اللي هتبعته هيتقسم لأكتر من packets فكرة إن ال packets توصل بنفس الترتيب اللي اتبعتت بيه مش مضمونة! كل packet ممكن تاخد طريق مختلف عن أختها على حسب ظروف وعوامل متغيرة، وده بدوره هيسبب إن فيه اختلاف في timing الوصول. ال tcp protocol الناحية التانية هيجمعهم ويرتبهم ليك قبل ما يديهم لل application layer. <br>
 
 - .. من النقطتين دول أعتقد ممكن تكون كوّنت intuition معين عن ال tcp .. التفاصيل في تكملة الفصل <br>
 <br>
-جملة أخيرة مهمة عن ال tcp protocol وتأثيره من منظور ال web performance هي وبشكل غير مفاجئ بالمرة: <br>
+جملة أخيرة مهمة عن ال tcp protocol وتأثيره من منظور ال web performance هي وبشكل غير مفاجئ بالمرة:
+</div>
 
 > Tcp is optimised for accurate delivery rather than a timely one
-
-</div>
 
 <div dir="rtl">
 
@@ -52,18 +53,16 @@ author: saif
 
 عشان ن establish connection بين ال sender وال receiver لازم يسلموا على بعض ٣ مرات قبل ما ال application data تبدأ تتبعت. <br>
 <br>
-نظريا، أهم حاجة بتتبعت هنا هي ال sequence numbers ودي أرقام عشوائية زي ما هنشوف. <br>
+نظرياً، أهم حاجة بتتبعت هنا هي ال sequence numbers ودي أرقام عشوائية زي ما هنشوف. <br>
 <br>
-بالإضافة لل sequence numbers فيه flags تانية بتتبعت هنعرفها مع الوقت (ال rwnd والscaling window option كأمثلة) <br>
+بالإضافة لل sequence numbers فيه flags تانية بتتبعت هنعرفها مع الوقت (ال rwnd وال scaling window option كأمثلة) <br>
 <br>
 sender or client: ازيك، اتفضل X ده رقم عشوائي انا اختارته وانا جايلك (SYN) <br>
 <br>
-receiver or server: أهلا، ده X+1 وده Y انا كمان اختارت رقم عشوائي وانا جايلك (SYN-ACK) <br>
+receiver or server: أهلا، ده X+1 وده Y انا كمان اختارت رقم عشوائي وانا جايلك (SYN-ACK) هو خد ال X زوّد عليها +1 واختار هو كمان رقم عشوائي <br>
 <br>
 sender or client: عُلِم، انا كمان هزود +1 على كل من ال X وال Y. ودي خطوة ال (ACK) وعلطول هتبدأ عملية نقل ال application data بمجرد ما السيرفر يستلم من ال الكلاينت ال ack <br>
 <br>
-دي عملية ال tcp startup اللي بتحصل مع كل connection جديد وبالتالي هي مساحة تطوير ممكن نحسن فيها وعامل مهم ومؤثر في ال performance ؛ لأن بشكل بسيط وبديهي انت مع كل connection هتعمل full roundtrip من الكلاينت للسيرفر والعكس، وده وقت محسوب مهما كان قليل، ورقم هنعتبره من ضمن أرقام حسبة ال latency <br>
-<br>
-وبالتالي بيظهر أهمية ال connection reuse <br>
-<br>
+دي عملية ال tcp startup اللي بتحصل مع كل connection جديد وبالتالي هي مساحة تطوير وعامل مؤثر في ال performance ؛ لأن بشكل بديهي انت مع كل connection هتعمل full roundtrip من الكلاينت للسيرفر وترجع تاني، وده وقت محسوب مهما كان قليل! ورقم هنعتبره من ضمن أرقام حسبة ال latency وبالتالي بيظهر أهمية ال connection reuse
+
 </div>
